--- a/htmlDesign/studentdashboard.html
+++ b/htmlDesign/studentdashboard.html
@@ -8,14 +8,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./public/css/login.css" />
+    <link rel="stylesheet" href="../public/css/login.css" />
     <title>Student Dashboards</title>
   </head>
 
   <body>
     <header class = "row d-flex justify-content-between bg-primary">
        <h1 class="col col-6">ABC Primary School</h1>
-       <img class="col col-2 col-md-1" src="./public/image/abc_logo_gold.png" alt="ABC school Logo" >
+       <img class="col col-2 col-md-1" src="../public/image/abc_logo_gold.png" alt="ABC school Logo" >
     </header>
 
     <div class="container d-flex justify-content-center">
@@ -27,36 +27,14 @@
                     <thead>
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">title</th>
+                        <th scope="col">ExerciseId</th>
+                        <th scope="col">Title</th>
                         <th scope="col">Grade</th>
+                        <th scope="col">Updated Date</th>
                       </tr>
                     </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td><a href="./exercisepage.html" >title 1</a></td>
-                        <td>Grade 1</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td><a href="./exercisepage.html" >title 2</a></td>
-                        <td>Grade 2</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td><a href="./exercisepage.html" >title 3</a></td>
-                        <td>Grade 3</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">4</th>
-                        <td><a href="./exercisepage.html" >title 4</a></td>
-                        <td>Grade 4</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">5</th>
-                        <td><a href="./exercisepage.html" >title 5</a></td>
-                        <td>Grade 5</td>
-                      </tr>
+                    <tbody id="dashboardcontent">
+
                     </tbody>
                   </table>
             </div>
@@ -70,6 +48,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./public/js/main.js"></script>
+    <script src="../public/js/main.js"></script>
   </body>
 </html>
