--- a/htmlDesign/main.html
+++ b/htmlDesign/main.html
@@ -20,6 +20,20 @@
     <header class = "row d-flex justify-content-between bg-primary">
        <h1 class="col col-6">ABC Primary School</h1>
        <img class="col col-2 col-md-1" src="../public/image/abc_logo_gold.png" alt="ABC school Logo" >
+       <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Dashboards</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main>
