--- a/htmlDesign/signuppage.html
+++ b/htmlDesign/signuppage.html
@@ -20,7 +20,7 @@
 
     <main>       
         <div class="container d-flex justify-content-center">
-            <div class="col col-6 m-3">
+            <div class="col col-6 ">
                 <h2 class="shadow-none p-3 mb-3 bg-secondary rounded">Student/Teacher Sign Up</h2>
                 <div class="form-floating">
                     <input class="form-control col-10 border mb-3" type="text" id="UserId" placeholder="User Id">
@@ -60,6 +60,7 @@
                 </div>
 
                 <button type="button m-3" class="btn btn-primary">Sign Up</button>
+                
             </div>
         </div>
     </main>
